src/App.scss
.pf-v5-c-page-header.pf-v5-c-page__main-section {
  &.page-header-tabs {
      padding-bottom: 0px !important;
  }

  .pf-v5-l-tabs, .pf-v5-c-tabs {
      padding-top: 22px;
  }
}

.pf-v5-c-modal-box__body .pf-v5-c-table.pf-v5-m-sticky-header > thead > tr > * {
  top: calc(-1 * var(--pf-v5-c-modal-box__body--PaddingTop));
}

.policy-delete-body-text {
  padding-bottom: 18px;
}

.upload-instructions {
    background: white
}

.policy-details-button {
    display: flex;
    justify-content: right;
}

.chart-inline tspan {
  font-family: inherit !important;
}

.wizard-progress-bar {
    text-align: left;
    width: var(--pf-v5-global--breakpoint--sm);
}

.wizard-failed-message {
    color: var(--pf-v5-global--danger-color--100);
    font-weight: bold;
    text-align: left;
    width: var(--pf-v5-global--breakpoint--sm);
}

.wizard-failed-errors {
    color: var(--pf-v5-global--danger-color--100);
    font-weight: normal;
    text-align: left;
    width: var(--pf-v5-global--breakpoint--sm);
}

.grey-icon {
  color: var(--pf-v5-global--Color--200);
}

button.pf-v5-c-button.pf-m-tertiary {
  &.wizard-os-button {
    padding: 30px;
    margin-right: 15px;
    --pf-v5-c-button--m-tertiary--focus--BorderColor: #06c;
    --pf-v5-c-button--m-tertiary--hover--BorderColor: #06c;
  }

  &.active-wizard-os-button {
    font-weight: bold;
    color: #06c;
    --pf-v5-c-button--m-tertiary--BorderColor: #06c;
    --pf-v5-c-button--BorderWidth: 2px;
  }
}

.ins-c-bulk-select {
  white-space: nowrap;
}

.ins-c-warning-text {
    color: var(--pf-v5-global--warning-color--200);
}

.ins-c-non-bold-h2 {
  font-size: var(--pf-v5-c-content--h2--FontSize);
  font-weight: normal;
}

.ins-u-passed {
  color: var(--pf-v5-global--success-color--200);
}

.ins-u-failed {
  color: var(--pf-v5-global--danger-color--100);
}

.ins-u-warning {
  color: var(--pf-v5-global--warning-color--100);
}

.ins-c-inventory__list-tags {
    display: block;
    position: relative;
    top: 8px;
}

button.pf-v5-c-button.pf-m-plain {
    --pf-v5-c-button--FontSize: var(--pf-v5-c-button--m-link--m-inline--FontSize);
    padding: 0;
    text-align: left;
}

button.pf-v5-c-menu-toggle {
   padding: 6px 8px;

   &.ins-c-tagfilter {
     padding: 0;
   }
 }

.ins-c-primary-toolbar__group-filter button.ins-c-osfilter__os-filter-button {
  background: #FFF;

  label {
    cursor: default;
  }

  input {
    display: none;
  }

  .ins-c-osfilter__no-os {
    color: #000;
  }
}
.reports-table {
  td {
      vertical-align: middle;
    }
}

.pf-v5-c-table__tree-view-title-cell.compliance-rule-details .pf-v5-c-table__check {
  visibility: hidden
}

